test/compile_fail/double_resume.shift
(module double_resume
  (effect input i32 i32)
  (export bad () i32
    (handlers
      (input request resume
        (resume request)
        (resume request)))
    (program
      (let value (perform input 1))
      (return value))))
